--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
+APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:8uGn3CwlHaLv0KEBLzkm7EfuKhvwXCWpJoRpWwDQZjc=
 APP_DEBUG=true
-APP_LOG_LEVEL=debug
 APP_URL=http://localhost/laravel_template_v6
 
 #Site Restriction
@@ -10,6 +10,8 @@ SITE_RESTRICTED=true
 SITE_RESTRICTION_TYPE=cookie
 SITE_RESTRICTION_VAR=password_entered
 SITE_RESTRICTION_PASSWORD=P@ssword1
+
+LOG_CHANNEL=daily
 
 DB_CONNECTION=mysql
 #Local
@@ -35,23 +37,33 @@ DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
+QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
-QUEUE_DRIVER=sync
+SESSION_LIFETIME=120
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=mail
-MAIL_HOST=mailtrap.io
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=us-east-1
+AWS_BUCKET=
+
 PUSHER_APP_ID=313427
-PUSHER_KEY=a6ebd79e60efcda5975c
-PUSHER_SECRET=5aa1b2195cd3a03d340f
+PUSHER_APP_KEY=a6ebd79e60efcda5975c
+PUSHER_APP_SECRET=5aa1b2195cd3a03d340f
+PUSHER_APP_CLUSTER=mt1
+
+MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 #programmer10@dogandrooster.com keys
 NOCAPTCHA_SECRET=6LeSO6YUAAAAAGqNuHxYt_aYYyQezob117i_E6-F
