--- a/composer.json
+++ b/composer.json
@@ -8,32 +8,28 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
-        "anhskohbo/no-captcha": "^3.0",
+        "php": "^7.2",
+        "anhskohbo/no-captcha": "dev-master",
         "barryvdh/laravel-dompdf": "^0.8.2",
         "barryvdh/laravel-snappy": "^0.4.1",
         "fideloper/proxy": "^4.0",
         "intervention/image": "dev-master",
         "laracasts/flash": "^3.0",
-        "laravel/framework": "5.8.*",
+        "laravel/framework": "^6.0",
+        "laravel/helpers": "^1.1",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.4.0",
+        "laravelcollective/html": "^6.0",
         "prettus/l5-repository": "^2.6",
         "pusher/pusher-php-server": "^2.6",
-        "spatie/laravel-permission": "^1.16"
+        "spatie/laravel-permission": "^3.0"
     },
     "require-dev": {
-        "beyondcode/laravel-dump-server": "^1.0",
-        "filp/whoops": "^2.0",
+        "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0",
-        "orangehill/iseed": "dev-master",
-        "symfony/thanks": "^1.0",
-        "symfony/css-selector": "3.1.*",
-        "symfony/dom-crawler": "3.1.*",
-        "xethron/migrations-generator": "^2.0"
+        "nunomaduro/collision": "^3.0",
+        "phpunit/phpunit": "^8.0",
+        "orangehill/iseed": "dev-master"
     },
     "config": {
         "optimize-autoloader": true,
