--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "sweetalert": "1.1.3",
     "vue": "^2.5.17",
     "vue-template-compiler": "^2.6.10"
+  },
+  "dependencies": {
+    "datatables": "^1.10.18"
   }
 }
