--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue-template-compiler": "^2.6.10"
   },
   "dependencies": {
+    "cookieconsent": "^3.1.1",
     "datatables": "^1.10.18"
   }
 }
