--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
+    "/css/admin-control.css": "/css/admin-control.css",
     "/fonts/ajax-loader.gif": "/fonts/ajax-loader.gif",
     "/css/admin.css": "/css/admin.css",
     "/js/admin.js": "/js/admin.js"
