--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "laravelcollective/html": "^6.0",
         "prettus/l5-repository": "^2.6",
         "pusher/pusher-php-server": "^2.6",
-        "spatie/laravel-permission": "^3.0"
+        "spatie/laravel-permission": "^3.0",
+        "spatie/once": "^2.2"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
