--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.2",
         "anhskohbo/no-captcha": "dev-master",
+        "authorizenet/authorizenet": "^2.0",
         "barryvdh/laravel-dompdf": "^0.8.2",
         "barryvdh/laravel-snappy": "^0.4.1",
         "fideloper/proxy": "^4.0",
